--- a/app/views/questions/show.template.haml
+++ b/app/views/questions/show.template.haml
@@ -1,8 +1,22 @@
-.pure-g
-	.pure-u-1
-		%h1 #{@question.statement}
-	.pure-u-1
-		- if @question.comments.count > 0 then
-			- @question.comments.order(:created_at).limit(10).each do |comment|
-				.pure-u-1
-					%p #{comment.statement} @#{comment.created_at} - #{ User.find(comment.user_id).username }
+.col-xs-12
+	%h1.page-header #{@question.statement}
+	.row
+		.col-xs-12
+			%h5 Comments
+			- if @question.comments.count > 0 then
+				- @question.comments.order(:created_at).limit(10).each do |comment|
+					.row
+						.col-xs-12
+							- user = User.find_by_id(comment.user_id)
+							%p - #{comment.statement} @#{comment.created_at} - #{ link_to user.username,user_path(user.username) }
+				.row
+					= render :template => 'comments/new.template'
+		.col-xs-12
+			%h5.page-header Answers
+			- if @question.answers.count == 0 then
+				%p No answers yet. Be the first the answer
+			- else
+				- @question.answers.each do |answer|
+					%p #{ answer.statement }
+			.row
+				= render :template => 'answers/new.template'
