--- a/app/views/issues/show.html.haml
+++ b/app/views/issues/show.html.haml
@@ -1,16 +1,17 @@
-.row
-	.col-xs-12
-		%nav.navbar.navbar-default
-			.container-fluid	
-				.navbar-header
-					%button.navbar-toggle.collapsed{ :type => 'button', :data => { :toggle => 'collapse', :target => '#sp-menu' } }
-						%span.sr-only Toggle Menu
-						%span.icon-bar
-						%span.icon-bar
-						%span.icon-bar
-					%a.navbar-brand{ :href => '#' } SPMenu
-				.navbar-collapse.collapse#sp-menu
-					%a.btn.btn-default.navbar-btn{ :href => new_issue_issue_tracker_path(@issue) } Update
+- if current_user.admin? then
+	.row
+		.col-xs-12
+			%nav.navbar.navbar-default
+				.container-fluid	
+					.navbar-header
+						%button.navbar-toggle.collapsed{ :type => 'button', :data => { :toggle => 'collapse', :target => '#sp-menu' } }
+							%span.sr-only Toggle Menu
+							%span.icon-bar
+							%span.icon-bar
+							%span.icon-bar
+						%a.navbar-brand{ :href => '#' } SPMenu
+					.navbar-collapse.collapse#sp-menu
+						%a.btn.btn-default.navbar-btn{ :href => new_issue_issue_tracker_path(@issue) } Update
 .row
 	%h1.page-header 
 		Issue 
