--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -36,9 +36,10 @@
 								%ul.dropdown-menu
 									%li
 										%a{ :href => user_issues_path(current_user) } Your Issues
-									%li.divider
-									%li 
-										%a{ :href => issue_extra_info_details_path } Extra Issue Details
+									- if current_user.admin? then
+										%li.divider
+										%li 
+											%a{ :href => settings_path } Settings
 									%li.divider
 									%li
 										= link_to 'Logout', destroy_user_session_path, :method => :delete
