#12; notifications at top of the website, shows up when updating/creating issues  & signing in; #9 attempt to save ldap connection through session variable (failed)

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -47,6 +47,12 @@
 								%a{ :href => new_user_session_path } Login
 
 		.container
+			- flash.each do |name, msg| 
+				.div.alert{ :class => "alert-#{ flash_class(name)  }" } 
+					#{ msg }
+					%button.close{ :type => 'button', :'aria-label' => 'Close', :'data-dismiss' => 'alert' }
+						%span{ :'aria-hidden' => 'true' }  &times;
+		.container
 			= yield
 		.container
 			.row-xs-12
