--- a/app/views/settings/index.html.haml
+++ b/app/views/settings/index.html.haml
@@ -8,3 +8,5 @@
 		:target_path => issue_extra_info_details_path, :target_name => 'Extra Info' }
 	= render :template => 'settings/interface.html', :locals => { :target_picture => 'http://placehold.it/120x120', 
 		:target_path => admins_path, :target_name => 'Admins' }
+	= render :template => 'settings/interface.html', :locals => { :target_picture => 'http://placehold.it/120x120', 
+		:target_path => report_admins_path, :target_name => "Admin's Report" }
