--- a/app/views/settings/index.html.haml
+++ b/app/views/settings/index.html.haml
@@ -10,3 +10,5 @@
 		:target_path => admins_path, :target_name => 'Admins' }
 	= render :template => 'settings/interface.html', :locals => { :target_picture => 'http://placehold.it/120x120', 
 		:target_path => report_admins_path, :target_name => "Admin's Report" }
+	= render :template => 'settings/interface.html', :locals => { :target_picture => 'http://placehold.it/120x120', 
+		:target_path => setup_admins_path , :target_name => "Server Setup" }
