#17: moving from ENV to module settings; provide ways to update constant in module

--- a/app/views/admins/setup.html.haml
+++ b/app/views/admins/setup.html.haml
@@ -15,5 +15,6 @@
 						%tr
 							%td #{ setting.key }
 							%td
-								%input.form-control{ :type => 'text', :value => setting.value }
-		%button.btn.btn-primary{ :type => 'button' } Update
+								%input.form-control{ :type => 'text', :name => "settings[#{category}][#{setting.key}]", 
+									:value => setting.value }
+		%button.btn.btn-primary{ :type => 'submit' } Update
