--- a/app/views/app_mailer/status_update.html.haml
+++ b/app/views/app_mailer/status_update.html.haml
@@ -4,4 +4,4 @@
 %p Click #{ link_to 'here', issue_url(@issue) } to view your issue.
 
 %p Regrads,
-%p #{ ENV["site_brand"] }
+%p #{ Problem::Settings[:site][:brand] }
