--- a/app/views/admins/setup.html.haml
+++ b/app/views/admins/setup.html.haml
@@ -8,8 +8,9 @@
 			%table.table
 				%thead
 					%tr
-						%th.col-xs-6 Key
+						%th.col-xs-5 Key
 						%th.col-xs-6 Value
+						%th.col-xs-1 Help
 				%tbody
 					- Setting.where(:category => category).each do |setting|
 						%tr
@@ -17,4 +18,6 @@
 							%td
 								%input.form-control{ :type => 'text', :name => "settings[#{category}][#{setting.key}]", 
 									:value => setting.value }
+							%td
+								%button.btn.btn-default{ :type => 'button', :data => { :container => 'body', :toggle => 'popover', :placement => 'left', :content => setting.HelpText } } ?
 		%button.btn.btn-primary{ :type => 'submit' } Update
