--- a/app/views/layouts/mailer.html.haml
+++ b/app/views/layouts/mailer.html.haml
@@ -1,7 +1,7 @@
 !!!!
 %html
 	%head
-		%title #{ ENV["site_title"] }
+		%title #{ Problem::Settings[:site][:title] }
 	%body
 		.container
 			= yield
