#17, setting table is only used for site brand and title. Add default value field to give default value; #19 extra info button is not shown if the Extra info features is not set

--- a/app/views/admins/setup.html.haml
+++ b/app/views/admins/setup.html.haml
@@ -17,7 +17,7 @@
 							%td #{ setting.key }
 							%td
 								%input.form-control{ :type => 'text', :name => "settings[#{category}][#{setting.key}]", 
-									:value => setting.value }
+									:value => setting.value, :placeholder => setting.defaultValue }
 							%td
 								%button.btn.btn-default{ :type => 'button', :data => { :container => 'body', :toggle => 'popover', :placement => 'left', :content => setting.HelpText } } ?
 		%button.btn.btn-primary{ :type => 'submit' } Update
