--- a/app/views/admins/setup.html.haml
+++ b/app/views/admins/setup.html.haml
@@ -19,5 +19,5 @@
 								%input.form-control{ :type => 'text', :name => "settings[#{category}][#{setting.key}]", 
 									:value => setting.value, :placeholder => setting.defaultValue }
 							%td
-								%button.btn.btn-default{ :type => 'button', :data => { :container => 'body', :toggle => 'popover', :placement => 'left', :content => setting.HelpText } } ?
+								%button.btn.btn-default{ :type => 'button', :data => { :container => 'body', :toggle => 'popover', :placement => 'left', :content => setting.HelpText, :trigger => 'focus' } } ?
 		%button.btn.btn-primary{ :type => 'submit' } Update
