* new text field to report an issue on behalf of someone else. * the text field will auto complete data gathered from Active Directory. * new affected_user_id field in Issue table to show that the issue is reported for someone else * a new StoredLDAP module to help in querying ldap.

--- a/app/views/issues/user_issues.html.haml
+++ b/app/views/issues/user_issues.html.haml
@@ -2,7 +2,7 @@
 	.col-xs-12
 		%h1.page-header
 			Issues
-			%small by #{ @user.name }
+			%small concerning #{ @user.name }
 	.col-xs-12
 		- if @issues.empty? then
 			%p.lead You have no Issues
