--- a/app/views/issues/_form.html.haml
+++ b/app/views/issues/_form.html.haml
@@ -1,4 +1,10 @@
 = form_for @issue, { :url => @target_url } do |f|
+	- if current_user.admin? then
+		.form-gorup
+			%label
+				Affected User:
+			%input#affected-user.form-control{ :type => 'text', :name => 'affected_user', :placeholder => "#{current_user.name} or type name" }
+			%input#affected-user-mail{:type => 'hidden', :name => 'affected_user_email' }
 	.form-group
 		= f.label :description	
 		= f.text_area :description, { :rows => 15 , :class => 'form-control', :placeholder => 'Describe your issue here' }
