#9: admins can report issues on behalf on other users; issue concerning an affected party can be change. issues table shows affected party instead of reported by

--- a/app/views/issues/_form.html.haml
+++ b/app/views/issues/_form.html.haml
@@ -3,7 +3,9 @@
 		.form-gorup
 			%label
 				Affected User:
-			%input#affected-user.form-control{ :type => 'text', :name => 'affected_user', :placeholder => "#{current_user.name} or type name" }
+			%input#affected-user.form-control{ :type => 'text', :name => 'affected_user', 
+				:placeholder => "#{current_user.name} or type name", 
+				:value => @issue.affected_user.nil? ? "" : @issue.affected_user.name }
 			%input#affected-user-mail{:type => 'hidden', :name => 'affected_user_email' }
 	.form-group
 		= f.label :description	
