#14: add live issues performance report for each admims. will show show many issues has been opened, assigned and closed by each admin for the past 6-7 months

--- a/app/views/settings/index.html.haml
+++ b/app/views/settings/index.html.haml
@@ -9,6 +9,6 @@
 	= render :template => 'settings/interface.html', :locals => { :target_picture => 'http://placehold.it/120x120', 
 		:target_path => admins_path, :target_name => 'Admins' }
 	= render :template => 'settings/interface.html', :locals => { :target_picture => 'http://placehold.it/120x120', 
-		:target_path => report_admins_path, :target_name => "Admin's Report" }
+		:target_path => reports_admins_path, :target_name => "Admin's Report" }
 	= render :template => 'settings/interface.html', :locals => { :target_picture => 'http://placehold.it/120x120', 
 		:target_path => setup_admins_path , :target_name => "Server Setup" }
