--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
 		%meta{ :name => 'viewport', :content => 'width=device-width, initial-scale=1' }
 		= javascript_include_tag 'application', 'data-turbolinks-track' => true 
 		= javascript_include_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js'
+		= javascript_include_tag 'http://code.highcharts.com/highcharts.js'
 	%body
 		.navbar.navbar-default
 			.container-fluid
