--- a/app/views/admins/reports_show.html.haml
+++ b/app/views/admins/reports_show.html.haml
@@ -4,6 +4,9 @@
 	%h4.page-header
 		Issue Handling Performance
 		#issues-chart
+			%i.fa.fa-spin.fa-spinner
 	%p Open-close performance, etc
 	%h4.page-header
 		Extra-Info Performance
+		#xtra-info-chart
+			%i.fa.fa-spin.fa-spinner
