--- a/app/views/settings/index.html.haml
+++ b/app/views/settings/index.html.haml
@@ -12,3 +12,5 @@
 		:target_path => reports_admins_path, :target_name => "Admin's Report" }
 	= render :template => 'settings/interface.html', :locals => { :target_picture => 'http://placehold.it/120x120', 
 		:target_path => setup_admins_path , :target_name => "Server Setup" }
+	= render :template => 'settings/interface.html', :locals => { :target_picture => 'http://placehold.it/120x120', 
+		:target_path => import_index_path , :target_name => "Import Issues" }
