--- a/app/views/issues/_form.html.haml
+++ b/app/views/issues/_form.html.haml
@@ -1,15 +1,16 @@
 = form_for @issue, { :url => @target_url } do |f|
+	= action_name
+	= controller_name
 	- if current_user.admin? then
-		.form-group
-			%label
-				Tags Test
-			%select#tags-test.form-control{ :multiple => hrue, :name => 'tagstest' }
 		.form-gorup
 			%label
 				Affected User:
-			%input#affected-user.form-control{ :type => 'text', :name => 'affected_user',
-				:value => @issue.affected_user.nil? ? "" : @issue.affected_user.name }
-			%input#affected-user-mail{:type => 'hidden', :name => 'affected_user_email' }
+			- if controller_name == "issues" && action_name == "new" then
+				%select#affected-user.form-control{ :name => 'affected_users[]', :multiple => true, :placeholder => current_user.name }
+				%select#affected-user-mail.hide{:name => 'affected_user_mails[]', :type => 'hidden', :multiple => true }
+			- else
+				%input.form-control{:name => 'affected_user', :value => @issue.affected_user.name, :disabled => true, :type => 'text' }
+				%input{ :name => 'affected_user_mail', :value => @issue.affected_user.email, :type => 'hidden'}
 	.form-group
 		= f.label :description
 		= f.text_area :description, { :rows => 15 , :class => 'form-control', :placeholder => 'Describe your issue here' }
