--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
 		= stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css'
 		= stylesheet_link_tag '//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'
 		%meta{ :name => 'viewport', :content => 'width=device-width, initial-scale=1' }
-		= javascript_include_tag 'application', 'data-turbolinks-track' => true 
+		= javascript_include_tag 'application', 'data-turbolinks-track' => true
 		= javascript_include_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js'
 		= javascript_include_tag 'http://code.highcharts.com/highcharts.js'
 	%body
@@ -15,9 +15,9 @@
 				.navbar-header
 					%button.navbar-toggle.collapsed{ :type => 'button', :data => { :toggle => 'collapse', :target => '#root' } }
 						%span.sr-only Toggle Navigation
-						%span.icon-bar	
-						%span.icon-bar	
-						%span.icon-bar	
+						%span.icon-bar
+						%span.icon-bar
+						%span.icon-bar
 					%a.navbar-brand{ :href => root_path } #{ Setting.getValue('site', 'brand') or "Problem?" }
 				.collapse.navbar-collapse#root
 					- if user_signed_in? then
@@ -31,7 +31,7 @@
 					%ul.nav.navbar-nav.pull-right
 						- if user_signed_in? then
 							%li
-								%a.dropdown-list{ :href => '#', :role => 'menu', :'data-toggle' => 'dropdown' } 
+								%a.dropdown-list{ :href => '#', :role => 'menu', :'data-toggle' => 'dropdown' }
 									#{ current_user.name }
 									%span.caret
 								%ul.dropdown-menu
@@ -39,7 +39,7 @@
 										%a{ :href => user_issues_path(current_user) } Your Issues
 									- if current_user.admin? then
 										%li.divider
-										%li 
+										%li
 											%a{ :href => settings_path } Settings
 									%li.divider
 									%li
@@ -49,9 +49,9 @@
 								%a{ :href => new_user_session_path } Login
 
 		.container
-			- flash.each do |name, msg| 
-				.div.alert{ :class => "alert-#{ flash_class(name)  }" } 
-					#{ msg }
+			- flash.each do |name, msg|
+				.div.alert{ :class => "alert-#{ flash_class(name)  }" }
+					#{ msg.html_safe }
 					%button.close{ :type => 'button', :'aria-label' => 'Close', :'data-dismiss' => 'alert' }
 						%span{ :'aria-hidden' => 'true' }  &times;
 		.container
@@ -60,8 +60,7 @@
 			.row-xs-12
 				%footer
 					%p
-						&copy; 2015 by Problems or Suggestion, mail 
+						&copy; 2015 by Problems or Suggestion, mail
 						%a{ :href => "mailto:malekerwin.karim@petronas.com.my?subject=Regarding #{ Setting.getValue('site', 'brand') or 'Problem?' }" }  Malek Erwin Karim
 					%p
 						Build version #{Problem::REVISION}
-
